# NAJDA

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml
backend/: Cargo.toml
backend/crates/api/: Cargo.toml
backend/crates/api/src/: auth.rs  config.rs  lib.rs  main.rs  phone.rs  routes.rs  state.rs
backend/crates/api/src/handlers/: common.rs  groups.rs  health.rs  help_requests.rs  leader.rs  locations.rs  missing_persons.rs  mod.rs  resources.rs  volunteers.rs
backend/crates/api/tests/: health.rs  validation.rs
backend/migrations/: 20260722000001_create_wilayas.sql  20260723000001_create_communes.sql  20260723000002_create_groups.sql  20260723000003_create_volunteers.sql  20260723000004_create_resource_offers.sql  20260723000005_create_help_requests.sql  20260723000006_create_missing_persons.sql
docs/: 00-vision-and-principles.md  01-users-and-roles.md  30-new-feature-proposals.md  90-priority-matrix.md  91-mvp-roadmap.md  README.md
docs-ar/: 00-الرؤية-والمبادئ.md  01-المستخدمون-والأدوار.md  30-مقترحات-ميزات-جديدة.md  90-مصفوفة-الأولويات.md  91-خارطة-طريق-النسخة-الأولية.md  README.md
docs-ar/modules/: 10-خريطة-الحرائق-المباشرة.md  11-تنبيهات-الطوارئ.md  12-طلبات-الاستغاثة.md  13-المفقودون-ولم-شمل-العائلات.md  14-إدارة-المتطوعين.md  15-إدارة-المآوي.md  16-الموارد-والتوزيع.md  17-التبرعات.md  18-التنسيق-الطبي.md  19-الطرق-والمسارات-الآمنة.md  20-الإبلاغ-عن-الحوادث.md  21-مركز-المعلومات.md  22-لوحة-الإحصائيات-العامة.md  23-الأضرار-والتعافي.md
docs/modules/: 10-live-wildfire-map.md  11-emergency-alerts.md  12-emergency-requests.md  13-missing-persons-and-reunification.md  14-volunteer-management.md  17-donations.md  (+8 more)
frontend/: package.json  pnpm-lock.yaml  tsconfig.json
(+37 files in other folders)
