[package]
name = "api"
version = "0.1.0"
edition.workspace = true

[dependencies]
axum = "0.8.9"
deadpool-redis = { version = "0.23.0", features = ["rt_tokio_1"] }
dotenvy = "0.15.7"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-rustls", "postgres", "migrate"] }
tokio = { version = "1.53.1", features = ["full"] }
tower-http = { version = "0.7.0", features = ["trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1.4"
tower = { version = "0.5.3", features = ["util"] }
